moved header to own component

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     </head>
 
     <body>
+        <!-- HEADER -->
+        <header v-component="header"></header>
+
+        <!-- CONTENT -->
         <div v-pw-view="currentPage"></div>
+
+        <!-- FOOTER -->
         <footer v-component="footer"></footer>
 
         <script src="build/build.js"></script>
