Working on templating

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header v-component="header"></header>
 
         <!-- CONTENT -->
-        <div v-pw-view="currentPage"></div>
+        <div v-pw-view="currentPage" class="content-wrapper"></div>
 
         <!-- FOOTER -->
         <footer v-component="footer"></footer>
