Add cloud particle system which rocks so far

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </head>
 
     <body>
+        <!-- STAGE -->
+        <div id="stage"></div>
+        
         <!-- HEADER -->
         <header v-component="header"></header>
 
