And opengraph infos

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale = 1.0, user-scalable=no" />
-        <!-- <meta property="og:image" content="http://nice-image.png"/> -->
-        <!-- <meta property="og:title" content="nice title"/> -->
-        <!-- <meta property="og:url" content="http://nice-url.com/"/> -->
-        <!-- <meta property="og:site_name" content="nice title"/> -->
-        <!-- <meta name="description" content="nice description"/> -->
+        <meta property="og:image" content="http://experiments.crma.ninja/assets/images/gobelins.png"/>
+        <meta property="og:title" content="CRMA '15 Experiments"/>
+        <meta property="og:url" content="http://experiments.crma.ninja/"/>
+        <meta property="og:site_name" content="CRMA '15 Experiments"/>
+        <meta name="description" content="Experiments done on a Workshop"/>
         <title>CRMA 2015 - Workshop</title>
         <link rel="favicon" href="/favicon.ico">
         <link rel="stylesheet" href="/build/styles.css" />
