--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="CRMA '15 Experiments"/>
         <meta property="og:url" content="http://experiments.crma.ninja/"/>
         <meta property="og:site_name" content="CRMA '15 Experiments"/>
-        <meta name="description" content="Experiments done on a Workshop"/>
+        <meta name="description" content="Three.JS experiments done during a Workshop"/>
         <title>CRMA 2015 - Workshop</title>
         <link rel="favicon" href="/favicon.ico">
         <link rel="stylesheet" href="/build/styles.css" />
